# bots

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  CppCheckSuppressions.txt  Dockerfile  curlpp_test.cpp  deploy_server_image.sh  entt_test.cpp  imgui.ini  infer.py  main.py  model.py  module_test.py  notes.md  package_linux.sh  requirements.txt  return_address.txt  run_oclint.sh  session_manager.py  setup.py  test.py  train.py  training_notes.md
SingularityTrainer/: CMakeLists.txt
SingularityTrainer/assets/shaders/: crt.frag  default.frag  default.vert  font.frag  particle.vert  texture.frag  texture.vert
SingularityTrainer/include/: asset_store.h  communicator.h  dummy_screen.h  idrawable.h  iparticle_system.h  iscreen.h  linear_particle_system.h  random.h  requests.h  resource_manager.h  screen_manager.h
SingularityTrainer/include/gui/: gui_button.h  igui_object.h  input.h
SingularityTrainer/include/test_screen/: bot.h  score_display.h  test_screen.h
SingularityTrainer/src/: CMakeLists.txt  asset_store.h  communicator.h  doctest.cpp  dummy_screen.cpp  headless.cpp  idrawable.h  iscreen.h  linear_particle_system.cpp  linear_particle_system.h  main.cpp  random.cpp  requests.h  resource_manager.cpp  resource_manager.h  screen_manager.cpp  screen_manager.h  utilities.cpp  utilities.h
SingularityTrainer/src/graphics/: CMakeLists.txt  colors.h  element_buffer.cpp  element_buffer.h  font.cpp  font.h  frame_buffer.cpp  frame_buffer.h  graphics_playground.cpp  imgui_utils.cpp  itransformable.cpp  post_proc_layer.cpp  post_proc_layer.h  render_data.cpp  render_data.h  renderer.cpp  renderer.h  shader.cpp  shader.h  sprite.cpp  sprite.h  stb_image.h  stb_truetype.cpp  stb_truetype.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.cpp  vertex_buffer_layout.h  window.cpp  window.h
SingularityTrainer/src/gui/: gui_button.cpp  gui_button.h  gui_panel.cpp  gui_panel.h
SingularityTrainer/src/particles/: CMakeLists.txt  iparticle_system.h  linear_particle_system.cpp  linear_particle_system.h
SingularityTrainer/src/screens/: CMakeLists.txt  dummy_screen.cpp  dummy_screen.h  koth_env_screen.cpp  koth_env_screen.h  main_menu_screen.cpp  main_menu_screen.h  target_env_screen.cpp  target_env_screen.h  watch_screen.cpp  watch_screen.h
SingularityTrainer/src/test_screen/: bot.cpp  bot.h  score_display.cpp  score_display.h  test_env.cpp  test_env.h  test_screen.cpp  test_screen.h
SingularityTrainer/src/training/: CMakeLists.txt  rigid_body.cpp  rigid_body.h  score_processor.cpp
cpp/: CMakeLists.txt  Makefile  box.h  iscreen.h  main.cpp  screen_manager.cpp  test_screen.cpp  test_screen.h
cpp/assets/shaders/: crt.frag  (+1 more)
cpp/include/: communicator.h  dummy_screen.h  iscreen.h  requests.h  resource_manager.h  screen_manager.h  test_screen.h  utilities.h
cpp/src/: CMakeLists.txt  box.cpp  communicator.cpp  dummy_screen.cpp  linear_particle_system.cpp  main.cpp  random.cpp  resource_manager.cpp  screen_manager.cpp  test_screen.cpp  utilities.cpp
src/: CMakeLists.txt  app.cpp  app.h  communicator.cpp  headless.cpp  headless_app.cpp  headless_app.h  io.cpp  io.h  iscreen.h  main.cpp  python_bindings.cpp  random.cpp  random.h  requests.h  resource_manager.h  screen_manager.cpp  server.cpp  server_app.cpp  server_app.h  utilities.cpp  utilities.h
src/audio/: CMakeLists.txt  audio_engine.cpp  audio_engine.h  audio_source.h  sound_handle.cpp  sound_handle.h
src/environment/: CMakeLists.txt  build_env.cpp  build_env.h  ecs_env.cpp  ecs_env.h  iecs_env.h  square.h  test_env.cpp  test_env.h
src/graphics/: CMakeLists.txt  colors.h  distortion_layer.cpp  distortion_layer.h  font.cpp  font.h  graphics_playground.cpp  idrawable.h  imgui_utils.cpp  imgui_utils.h  itransformable.h  post_proc_layer.cpp  post_proc_layer.h  render_data.cpp  render_data.h  sprite.cpp  sprite.h  window.cpp  window.h
src/misc/: CMakeLists.txt  animator.cpp  animator.h  app.cpp  app.h  asset_store.h  composition_root.cpp  composition_root.h  credentials_manager.cpp  credentials_manager.h  date.h  http_client.cpp  http_client.h  id_map.cpp  id_map.h  ihttp_client.h  imgui_utils.cpp  imgui_utils.h  io.cpp  io.h  matchmaker.cpp  matchmaker.h  module_factory.cpp  module_factory.h  module_texture_store.cpp  module_texture_store.h  random.cpp  random.h  resource_manager.cpp  resource_manager.h  screen_manager.cpp  screen_manager.h  spring_mesh.cpp  spring_mesh.h  thread_pool.h  transform.cpp  transform.h  utilities.cpp  utilities.h  validate_body.cpp  (+1 more)
src/networking/: CMakeLists.txt  action_store.cpp  action_store.h  client_agent.cpp  client_agent.h  client_communicator.cpp  client_communicator.h  game.cpp  game.h  messages.h  msgpack_codec.cpp  msgpack_codec.h  network_test.cpp  server_communicator.cpp  server_communicator.h
src/screens/: CMakeLists.txt  build_screen.cpp  build_screen.h  create_program_screen.cpp  create_program_screen.h  iscreen.h  koth_env_screen.cpp  koth_env_screen.h  main_menu_screen.cpp  main_menu_screen.h  multiplayer_screen.cpp  multiplayer_screen.h  target_env_screen.cpp  target_env_screen.h  train_screen.cpp  train_screen.h  training_wizard_screen.cpp  training_wizard_screen.h  watch_screen.cpp  watch_screen.h
src/server/: CMakeLists.txt  action_store.cpp  action_store.h  client_communicator.cpp  game.cpp  game.h  messages.h  msgpack_codec.cpp  msgpack_codec.h  server_communicator.cpp  server_communicator.h
src/tests/: CMakeLists.txt  e2e_framework.cpp  e2e_framework.h  test_navigation.cpp  test_training.cpp
src/training/: CMakeLists.txt  checkpointer.cpp  checkpointer.h  evaluator.cpp  evaluator.h  icollidable.h  isaver.h  mock_saver.cpp  mock_saver.h  observation_normalizer.cpp  observation_normalizer.h  rigid_body.cpp  rigid_body.h  saver.cpp  saver.h  score_processor.cpp  score_processor.h  trainer.cpp  trainer.h  training_program.cpp  training_program.h
src/ui/: CMakeLists.txt  back_button.cpp  back_button.h  background.cpp  background.h  plot.cpp  plot.h  spinner.cpp  spinner.h
(+659 files in other folders)
